# test-tasks

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
tasks/task1/: task1.py
tasks/task2/: task2.py
tasks/task3/: task3.py
tests/: test_for_task_1.py  test_for_task_2.py  test_for_task_3.py
